--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,19 +5,19 @@ on: push
 jobs:
   super-lint:
     name: Lint Code Base
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
 
     env:
       PYTHON: '3.7'
 
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      -name: Lint Code Base
-       uses: github/super-linter@v4
-       env:
-        DEFAULT_BRANCH: master
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        VALIDATE_PYTHON_BLACK: true
-        VALIDATE_PYTHON_FLAKEB: true
+      - name: Lint Code Base
+        uses: github/super-linter@v4
+        env:
+          DEFAULT_BRANCH: master
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_PYTHON_BLACK: true
+          VALIDATE_PYTHON_FLAKE8: true
